Fixed the banner overflow

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -588,7 +588,9 @@ body {
 }
 
 .banner {
-  display: block;
+  display: flex;
+  justify-content: left;
+  align-items: start;
   position: relative;
 }
 
